src/objects/Target_PEC_Consults_Completed_Target__c.object
<CustomObject>
    <description>Target number of Consults Completed per month</description>
    <fields>
        <fullName>Center_Location__c</fullName>
        <label>Center Location</label>
        <referenceTo>Center_Location__c</referenceTo>
        <relationshipName>Center_Location_r</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>When does this target become effective?</description>
        <inlineHelpText>When does this target become effective? (Can be set in advance of becoming effective.)</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Number__c</fullName>
        <description>Target Number of Consults to be Completed each month</description>
        <label>Target Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Target: PEC Consults Completed</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>CCT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target: PEC Consults Completed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>